ios7 - tried it once, reverted, trying again seems to work in ios7 (for now?)

--- a/TweetLocations/TweetLocations-Info.plist
+++ b/TweetLocations/TweetLocations-Info.plist
@@ -51,6 +51,10 @@
 	<true/>
 	<key>NSHumanReadableCopyright</key>
 	<string></string>
+	<key>NSPrefPaneIconFile</key>
+	<string>TwitLoc114.png</string>
+	<key>NSPrefPaneIconLabel</key>
+	<string>TweetLocations</string>
 	<key>UIApplicationExitsOnSuspend</key>
 	<false/>
 	<key>UIBackgroundModes</key>
@@ -59,16 +63,12 @@
 	</array>
 	<key>UIFileSharingEnabled</key>
 	<true/>
-	<key>NSPrefPaneIconFile</key>
-	<string>TwitLoc114.png</string>
-	<key>NSPrefPaneIconLabel</key>
-	<string>TweetLocations</string>
 	<key>UIInterfaceOrientation</key>
 	<string>UIInterfaceOrientationPortrait</string>
 	<key>UIMainStoryboardFile</key>
 	<string>iPhone</string>
 	<key>UIMainStoryboardFile~ipad</key>
-	<string>iPad</string>
+	<string>iPadnew</string>
 	<key>UIPrerenderedIcon</key>
 	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
