--- a/TweetLocations/TweetLocations-Info.plist
+++ b/TweetLocations/TweetLocations-Info.plist
@@ -1,106 +1,106 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
-	<key>CFBundleDisplayName</key>
-	<string>${PRODUCT_NAME}</string>
-	<key>CFBundleExecutable</key>
-	<string>${EXECUTABLE_NAME}</string>
-	<key>CFBundleGetInfoString</key>
-	<string></string>
-	<key>CFBundleIconFile</key>
-	<string></string>
-	<key>CFBundleIconFiles</key>
-	<array>
-		<string></string>
-	</array>
-	<key>CFBundleIcons</key>
-	<dict>
-		<key>CFBundlePrimaryIcon</key>
-		<dict>
-			<key>CFBundleIconFiles</key>
-			<array>
-				<string>TwitLoc57.png</string>
-				<string>TwitLoc114.png</string>
-				<string>TwitLoc72.png</string>
-				<string>TwitLoc144.png</string>
-			</array>
-			<key>UIPrerenderedIcon</key>
-			<true/>
-		</dict>
-	</dict>
-	<key>CFBundleIdentifier</key>
-	<string>com.curtsybear.${PRODUCT_NAME:rfc1034identifier}</string>
-	<key>CFBundleInfoDictionaryVersion</key>
-	<string>6.0</string>
-	<key>CFBundleName</key>
-	<string>${PRODUCT_NAME}</string>
-	<key>CFBundlePackageType</key>
-	<string>APPL</string>
-	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
-	<key>CFBundleSignature</key>
-	<string>????</string>
-	<key>CFBundleVersion</key>
-	<string>1.0</string>
-	<key>LSApplicationCategoryType</key>
-	<string></string>
-	<key>LSRequiresIPhoneOS</key>
-	<true/>
-	<key>NSHumanReadableCopyright</key>
-	<string></string>
-	<key>NSPrefPaneIconFile</key>
-	<string>TwitLoc114.png</string>
-	<key>NSPrefPaneIconLabel</key>
-	<string>TweetLocations</string>
-	<key>UIApplicationExitsOnSuspend</key>
-	<false/>
-	<key>UIBackgroundModes</key>
-	<array>
-		<string></string>
-	</array>
-	<key>UIFileSharingEnabled</key>
-	<true/>
-	<key>UIInterfaceOrientation</key>
-	<string>UIInterfaceOrientationPortrait</string>
-	<key>UIMainStoryboardFile</key>
-	<string>iPhone</string>
-	<key>UIMainStoryboardFile~ipad</key>
-	<string>iPadnew</string>
-	<key>UIPrerenderedIcon</key>
-	<true/>
-	<key>UIRequiredDeviceCapabilities</key>
-	<array>
-		<string>armv7</string>
-	</array>
-	<key>UIStatusBarHidden</key>
-	<false/>
-	<key>UIStatusBarStyle</key>
-	<string>UIStatusBarStyleBlackTranslucent</string>
-	<key>UIStatusBarTintParameters</key>
-	<dict>
-		<key>UINavigationBar</key>
-		<dict>
-			<key>Style</key>
-			<string>UIBarStyleDefault</string>
-			<key>Translucent</key>
-			<false/>
-		</dict>
-	</dict>
-	<key>UISupportedInterfaceOrientations</key>
-	<array>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
-		<string>UIInterfaceOrientationPortrait</string>
-	</array>
-	<key>UISupportedInterfaceOrientations~ipad</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationPortraitUpsideDown</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
-</dict>
+    <dict>
+        <key>CFBundleDevelopmentRegion</key>
+        <string>en</string>
+        <key>CFBundleDisplayName</key>
+        <string>${PRODUCT_NAME}</string>
+        <key>CFBundleExecutable</key>
+        <string>${EXECUTABLE_NAME}</string>
+        <key>CFBundleGetInfoString</key>
+        <string></string>
+        <key>CFBundleIconFile</key>
+        <string></string>
+        <key>CFBundleIconFiles</key>
+        <array>
+            <string></string>
+        </array>
+        <key>CFBundleIcons</key>
+        <dict>
+            <key>CFBundlePrimaryIcon</key>
+            <dict>
+                <key>CFBundleIconFiles</key>
+                <array>
+                    <string>TwitLoc57.png</string>
+                    <string>TwitLoc114.png</string>
+                    <string>TwitLoc72.png</string>
+                    <string>TwitLoc144.png</string>
+                </array>
+                <key>UIPrerenderedIcon</key>
+                <true/>
+            </dict>
+        </dict>
+        <key>CFBundleIdentifier</key>
+        <string>com.curtsybear.${PRODUCT_NAME:rfc1034identifier}</string>
+        <key>CFBundleInfoDictionaryVersion</key>
+        <string>6.0</string>
+        <key>CFBundleName</key>
+        <string>${PRODUCT_NAME}</string>
+        <key>CFBundlePackageType</key>
+        <string>APPL</string>
+        <key>CFBundleShortVersionString</key>
+        <string>1.0</string>
+        <key>CFBundleSignature</key>
+        <string>????</string>
+        <key>CFBundleVersion</key>
+        <string>1.0</string>
+        <key>LSApplicationCategoryType</key>
+        <string></string>
+        <key>LSRequiresIPhoneOS</key>
+        <true/>
+        <key>NSHumanReadableCopyright</key>
+        <string></string>
+        <key>UIApplicationExitsOnSuspend</key>
+        <false/>
+        <key>UIBackgroundModes</key>
+        <array>
+            <string></string>
+        </array>
+        <key>UIFileSharingEnabled</key>
+        <true/>
+        <key>NSPrefPaneIconFile</key>
+        <string>TwitLoc114.png</string>
+        <key>NSPrefPaneIconLabel</key>
+        <string>TweetLocations</string>
+        <key>UIInterfaceOrientation</key>
+        <string>UIInterfaceOrientationPortrait</string>
+        <key>UIMainStoryboardFile</key>
+        <string>iPhone</string>
+        <key>UIMainStoryboardFile~ipad</key>
+        <string>iPad</string>
+        <key>UIPrerenderedIcon</key>
+        <true/>
+        <key>UIRequiredDeviceCapabilities</key>
+        <array>
+            <string>armv7</string>
+        </array>
+        <key>UIStatusBarHidden</key>
+        <false/>
+        <key>UIStatusBarStyle</key>
+        <string>UIStatusBarStyleBlackTranslucent</string>
+        <key>UIStatusBarTintParameters</key>
+        <dict>
+            <key>UINavigationBar</key>
+            <dict>
+                <key>Style</key>
+                <string>UIBarStyleDefault</string>
+                <key>Translucent</key>
+                <false/>
+            </dict>
+        </dict>
+        <key>UISupportedInterfaceOrientations</key>
+        <array>
+            <string>UIInterfaceOrientationLandscapeLeft</string>
+            <string>UIInterfaceOrientationLandscapeRight</string>
+            <string>UIInterfaceOrientationPortrait</string>
+        </array>
+        <key>UISupportedInterfaceOrientations~ipad</key>
+        <array>
+            <string>UIInterfaceOrientationPortrait</string>
+            <string>UIInterfaceOrientationPortraitUpsideDown</string>
+            <string>UIInterfaceOrientationLandscapeLeft</string>
+            <string>UIInterfaceOrientationLandscapeRight</string>
+        </array>
+    </dict>
 </plist>
